Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4630

HA Fix starting from persistent store.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Clustering
    • None

    Description

      This was implemented as QPID-4325 but was broken by subsequent changes.

      When re-starting a persistent HA cluster, the broker that becomes primary should
      keep its store data while all the backup brokers should discard their store data
      and catch up from the primary. Backups cannot simply use their own stores
      because sequence numbers of stored messages will not match on all brokers. The
      backup erases individual queues and exchanges as the catch-up process gets to
      them.

      To reproduce: see tests in qpid/cpp/src/tests/ha_store_tests.py

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: